--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,7 @@
 
 /*  */
 .allcatogories {
-    padding: 20px 20px 20px 0;
+    padding: 20px 20px 15px 0;
     position: relative;
 }
 
@@ -432,7 +432,7 @@
 /* SECTION - 6 */
 .product_section {
     text-align: center;
-    padding: 25px 0;
+    padding: 30px 0;
     align-items: center;
 }
 
@@ -512,9 +512,15 @@
     font-family: arial;
 }
 
+.card .card-heading h5 {
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+}
+
 .card .card-heading {
     padding-bottom: 20px;
-    font-weight: 600;
+    /* font-weight: 600; */
     /* font-size: 15px; */
 }
 
@@ -633,7 +639,7 @@
 /* INSTORE-SERVICES */
 .instore-services {
     background-color: rgb(249, 249, 249);
-    padding: 50px 0;
+    padding: 50px 0 60px 0;
 }
 
 
@@ -649,7 +655,7 @@
 .instore-text {
     text-align: center;
     font-weight: 600;
-    padding: 0 10px;
+    padding: 0 10px 25px 10px;
     font-size: 22px;
     font-family: 'Ubuntu', sans-serif;
 }
@@ -664,7 +670,6 @@
 }
 
 .services_banners {
-    padding-top: 25px;
     position: relative;
 }
 
@@ -737,12 +742,9 @@
     color: #0973ba;
 }
 
-
-
 /* OUR TOP PRODUCTS */
 .our-top-products {
-    height: 785px;
-    padding-top: 20px;
+    padding: 50px 0 90px;
     position: relative;
 }
 
@@ -1037,12 +1039,21 @@ input[type=submit] {
     color: rgb(131, 137, 142);
 }
 
+.quicklinkssection ul li a:hover {
+    text-decoration: none;
+    color: rgb(14, 102, 161);
+}
+
 .quicklinkssection .quicklinksBottom a {
     text-decoration: none;
     color: #ed2328;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 15px;
+}
+
+.quicklinkssection .quicklinksBottom a:hover {
+    color: rgb(14, 102, 161);
 }
 
 .socialmedia ul li {
